adding changes from @HereInPlainSight makes launcher work again

--- a/launcher_config.ini
+++ b/launcher_config.ini
@@ -2,13 +2,18 @@
 [FFXIV]
 # Use a gui to ask for username, password, and one time password
 USEGUI = True
-# Set this to 1 if you have the Heavensward expansion installed.
-expansion_id = 0
+##
+# expansion_id should be set to the highest number you own as follows:
+# 0 = A Realm Reborn
+# 1 = Heavensward
+# 2 = Stormblood
+# 3 = Shadowbringers
+expansion_id = 3
 # Region you play the game in (3 is US)
 region = 3
 #Use Direct X 11 mode
-use_dx11 = False
-#Path to the game's directory (DON'T use quotes)
+use_dx11 = True
+#Absolute path to the game's directory (DON'T use quotes)
 path =
 #Command to run before executing the game
 #Leave blank for windows or MacOS, 'wine' for Linux
