--- a/launcher_config.ini
+++ b/launcher_config.ini
@@ -8,7 +8,8 @@ USEGUI = True
 # 1 = Heavensward
 # 2 = Stormblood
 # 3 = Shadowbringers
-expansion_id = 3
+# 4 = Endwalker
+expansion_id = 4
 # Region you play the game in (3 is US)
 region = 3
 #Use Direct X 11 mode
