Files hashed for login updated.  DX9 mode removed.

--- a/launcher_config.ini
+++ b/launcher_config.ini
@@ -9,16 +9,16 @@ USEGUI = True
 # 2 = Stormblood
 # 3 = Shadowbringers
 # 4 = Endwalker
+# 5 = Dawntrail
 expansion_id = 4
 # Region you play the game in (3 is US)
 region = 3
-#Use Direct X 11 mode
-use_dx11 = True
-#Absolute path to the game's directory (DON'T use quotes)
-path =
-#Command to run before executing the game
-#Leave blank for windows or MacOS, 'wine' for Linux
-pre_command =
-user =
-password =
-one_time_password =
+# Absolute path to the game's directory (DON'T use quotes)
+path = 
+# Command to run before executing the game
+# Leave blank for windows or MacOS, 'wine' for Linux
+pre_command = 
+# Pre-fill if preferable.
+user = 
+password = 
+one_time_password = 
